# MountainSim

./: .gitignore  CMakeLists.txt  README.md  bake.md
.codex/environments/: environment.toml
script/: build_and_run.sh  vulkan_probe.sh
shaders/: cloud.frag  cloud.vert  sky.frag  sky.vert  slice.vert  terrain.frag  terrain.vert
src/: camera.h  common.h  main.cpp  perlin.h  terrain.h  vulkan_app.h  vulkan_probe.cpp  weather.h
